media hover:hover added to avoid hover on mobile

--- a/src/listItem/listItem.css
+++ b/src/listItem/listItem.css
@@ -1,104 +1,109 @@
 .List-item {
-    background-color: #fafafa;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 24px;
-    padding: 0px;
-    box-shadow: 0 5px 15px rgb(96, 153, 205);
-    border-radius: 5px;
-  }
-  
-  .List-item-p {
-    margin: 24px 0 24px 0px;
-    padding: 0px;
-    width: calc(100%);
-    font-size: 18px;
-    line-height: 24px;
-    font-weight: 400;
-  }
-  
-  .List-item-p--complete {
-    text-decoration: line-through;
-  }
-  
-  .Icon {
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 48px;
-    width: 48px;
-    font-size: 24px;
-    font-weight: 700;
-  }
-  
-  .Icon-check {
-    position: absolute;
-    left: 12px;
-  }
-  
-  .Icon-check--active {
-    color: #4caf50
-  }
-  
-  .Icon-delete {
-    position: absolute;
-    top: -12px;
-    right: 0;
-    color: lightgray;
-  }
-  
-  .Icon-delete:hover {
-    color: red;
-  }
+  background-color: #fafafa;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+  padding: 0px;
+  box-shadow: 0 5px 15px rgb(96, 153, 205);
+  border-radius: 5px;
+}
 
-  .completed {
-    text-decoration: line-through;
-    color: rgb(169, 189, 207);
-  }
-  
+.List-item-p {
+  margin: 24px 0 24px 0px;
+  padding: 0px;
+  width: calc(100%);
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.List-item-p--complete {
+  text-decoration: line-through;
+}
+
+.Icon {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 48px;
+  width: 48px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.Icon-check {
+  position: absolute;
+  left: 12px;
+}
+
+.Icon-check--active {
+  color: #4caf50
+}
+
+.Icon-delete {
+  position: absolute;
+  top: -12px;
+  right: 0;
+  color: lightgray;
+}
+
+.completed {
+  text-decoration: line-through;
+  color: rgb(169, 189, 207);
+}
+
+.edit-btn{
+  position: absolute;
+  right: 0;
+  top: 36%;
+  cursor: pointer;
+  color: gainsboro;
+}
+
+@media (hover: hover) {
   .bi-check, .bi-x-lg:hover {
     cursor: pointer;
   }
-
-  .edit-btn{
-    position: absolute;
-    right: 0;
-    top: 36%;
-    cursor: pointer;
-    color: gainsboro;
+  .Icon-delete:hover {
+    color: red;
   }
-
   .edit-btn .bi-pencil:hover{
     color: green;
   }
-
-  .up-btn{
-    position: absolute;
-    left: 50%;
-    top: -20%;
-    color: rgb(169, 189, 207);
-    cursor: pointer;
-    transition-duration: 400ms;
 }
-.up-btn:hover{
+
+
+.up-btn{
+  position: absolute;
+  left: 50%;
+  top: -20%;
+  color: rgb(169, 189, 207);
+  cursor: pointer;
+  transition-duration: 400ms;
+}
+@media (hover: hover) {
+  .up-btn:hover{
     scale: 1.4;
     color: lightcoral
+  }
 }
 
 .down-btn{
-    position: absolute;
-    left: 50%;
-    top: 84%;
-    color: rgb(160, 176, 190);
-    cursor: pointer;
-    transition-duration: 1s;
+  position: absolute;
+  left: 50%;
+  top: 84%;
+  color: rgb(160, 176, 190);
+  cursor: pointer;
+  transition-duration: 1s;
 }
-.down-btn:hover{
-  scale: 1.4;
-  color: lightcoral;
+@media (hover: hover) {
+  .down-btn:hover{
+    scale: 1.4;
+    color: lightcoral;
+  }
 }
 
 .move-up {
